--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,22 +1,17 @@
 {
   "name": "suq-alfalah-frontend",
   "version": "1.0.0",
-  "private": true,
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.3.1",
-    "tailwindcss": "^3.4.13",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.47",
-    "vite": "^5.4.10"
+    "@vitejs/plugin-react": "^4.2.0",
+    "vite": "^5.0.0"
   }
 }
