--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,19 +1,15 @@
 {
-  "name": "suq-alfalah-frontend",
+  "name": "suq-alfalah-backend",
   "version": "1.0.0",
-  "private": true,
+  "type": "module",
+  "main": "server.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "start": "node server.js"
   },
   "dependencies": {
-    "axios": "^1.6.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-react": "^4.2.1",
-    "vite": "^5.2.0"
+    "express": "^4.18.2",
+    "mongoose": "^8.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1"
   }
 }
